[package]
name = "lanch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.8.0", features = ["svg", "image"] }
bincode = "1.3.3"
serde = {version = "1.0.152", features = ["derive"] }
chrono = {version = "0.4.23", features = ["std"] }
chrono-tz = "0.8.1"
lazy_static = "1.4.0"
freedesktop-icons = "0.2.3"
